# ComfyUI-UniversalDetailer

./: .gitignore  API_REFERENCE.md  CODE_REVIEW.md  CODE_REVIEW_FIXES_REPORT.md  COPILOT_REVIEW_CHECKLIST.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_STATUS.md  EXAMPLES.md  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_COPILOT_PROMPTS.md  IMPLEMENTATION_REPORT.md  LICENSE  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  PRIORITY_2_IMPLEMENTATION.py  PROJECT_HANDOFF.md  README.md  SPECIFICATIONS.md  __init__.py  basic_test.py  install.py  pyproject.toml  requirements.txt  setup.py  test_import.py  universal_detailer.py
.github/workflows/: ci.yml
detection/: __init__.py  model_loader.py  yolo_detector.py
masking/: __init__.py  mask_generator.py
tests/: __init__.py  run_tests.py  test_integration.py  test_mask_generator.py  test_universal_detailer.py  test_yolo_detector.py
utils/: __init__.py  comfyui_integration.py  error_handling.py  image_utils.py  mask_utils.py  memory_utils.py  performance_utils.py  sampling_utils.py
workflow_examples/: README.md  basic_face_enhancement.json  multi_part_enhancement.json
